--- a/profile.html
+++ b/profile.html
@@ -104,7 +104,7 @@ font-family: simvoni;
 			}
 		
 		}
-		button {
+		.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
 		width: 110%;
@@ -159,11 +159,19 @@ filter: brightness(0%);
 		color:gray;
 		font-size: 14px;	
 		}
-		body {
-			background-image: url("https://meower.org/assets/meowtain.png");
-			  background-repeat: no-repeat;
-			background-size: auto;
-			
+		html {
+			margin: 0;
+  background-image: url(https://meower.org/assets/meowtain.png) !important;
+  background-color: None !important;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  background-size: repeat;
+-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;			
 		}
 	</style>
 	
@@ -186,7 +194,7 @@ filter: brightness(0%);
 
 		
 	</header><div class="fade-in-animation"><div class="container">
-</a> <center><div class="w3-container"><button style="float:right" class="button">Moderator Actions</button><h2 style="float:left;"><img style="margin-right: 20px;"height="150px"src="https://api.meower.org/static/icon/21.svg"><h5 style="color:#fff; font-size:40px; padding-top: 20px;">Meower&nbsp;<br>
+</a> <center><div class="w3-container"><button style="float:right" class="button1">Moderator Actions</button><h2 style="float:left;"><img style="margin-right: 20px;"height="150px"src="https://api.meower.org/static/icon/21.svg"><h5 style="color:#fff; font-size:40px; padding-top: 20px;">Meower&nbsp;<br>
 	<span style="font-size: 30px; font-weight: 100;"><em>Online</span><span style="font-size 5px; font-weight: 10; margin-top:"><br>Level 4 Moderator</span></em></h5>
 
 <br>
