--- a/404.html
+++ b/404.html
@@ -185,6 +185,6 @@ filter: brightness(0%);
 - Made Meowy cry and now he's mad<br><br>The one thing we know for sure is you can click the Meower logo to return home</em></h4></div>
 		</div></div>
 	
-<div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div>
+<div class="stack-bottom"><div class="meowy_bg"><img style="  width: 100%;height: auto;max-width: 50vw;" src="https://meower.org/assets/cloudycircle.png"></div></div>
 </body>
 </html>
