--- a/downloads.html
+++ b/downloads.html
@@ -193,6 +193,6 @@ filter: brightness(0%);
 		</button><br><br><button class="button2"><h2 style="float:left;">v0.4.20&nbsp;</h2> <img height="20" style="float: left; margin-top: 16px;" src="https://meower.org/assets/releaseimage.png"><img height="40" style="float: right; margin-top: 7px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/github.png"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 23px;" src="https://meower.org/assets/linux.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/macos.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/windows.svg">
 	</button><br><h5><em>You've reached the end of the list...</em></h5></div></div>
 	
-<div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div></div>
+<div class="stack-bottom"><div class="meowy_bg"><img style="  width: 100%;height: auto;max-width: 50vw;" src="https://meower.org/assets/cloudycircle.png"></div></div></div>
 </body>
 </html>
