--- a/news.html
+++ b/news.html
@@ -196,6 +196,6 @@ filter: brightness(0%);
 </p></h2>
 	</postcontainer></newscontainer><br><br><br><br></div></div>
 	
-<div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div></div>
+<div class="stack-bottom"><div class="meowy_bg"><img style="  width: 100%;height: auto;max-width: 50vw;" src="https://meower.org/assets/cloudycircle.png"></div></div></div>
 </body>
 </html>
