fix formatting mistake

--- a/misc/email/accountdeletion.html
+++ b/misc/email/accountdeletion.html
@@ -62,7 +62,7 @@
       Your account was requested for deletion from IP [127.0.0.1]<br>
       
       <br>
-      Your account will be terminated in <strong>2 days</strong>. After that, your account will be <strong>lost foreve</strong><strong>r.</strong><br>
+      Your account will be terminated in <strong>2 days</strong>. After that, your account will be <strong>lost forever</strong><strong>.</strong><br>
 <br>
 If this was you, you can ignore this email.&nbsp; <br>
       <br>
