--- a/misc/email/automatedresponse(support@meower.org).html
+++ b/misc/email/automatedresponse(support@meower.org).html
@@ -61,7 +61,7 @@
     <p>Dear [user],<br><br>
       We've recieved your email to support@meower.org and a member of our team will be responding shortly.<br>
       <br>
-      <em>This is an automated message. If we don't send back in 1-2 months, please send another email.</em>&nbsp; &nbsp;&nbsp;<br>
+      <em>This is an automated message. If we don't send back in 2 weeks, please send another email.</em>&nbsp; &nbsp;&nbsp;<br>
 <br>
 
 - Meower Media Co.</p>
