--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>meower</title>
+    <title>Meower</title>
     <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
     <link href="/style.css" rel="stylesheet" type="text/css" />
   </head>
