Yeah so my idea didn't work out, new idea

--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Meower | Homepage</title>
-    <link rel="shortcut icon" href="assets/meowermpfp.png" type="image/x-icon">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body style="background-color:#333333; background-image:url(/assets/meowtain-blur.png);">
-    <h1></h1>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Meower | Homepage</title>
+  <link rel="shortcut icon" href="assets/meowermpfp.png" type="image/x-icon">
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+<style>
+  section {
+      background:  rgba(0, 0, 0, 0.3);
+      color: white;
+      border-radius: 1em;
+      padding: 1em;
+      top: 50%;
+      left: 50%;
+      margin: auto;
+      width: 60%;
+      text-align: center;
+      align-self: center;
+      align-content: center; }
+</style>
+<body style="background-image: url('/assets/meowtain-blur.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center;">
+  <br>
+  <section>
+    <a href="https://meower.org"><img src="/assets/logo.png"></a>
+  </section>
+  <br>
+  <section>
+    <a class="nav-links" href="https://app.meower.org">Launch</a> | <a class="nav-links" href="https://svelte.meower.org">Svelte Client</a> | <a class="nav-links" href="https://github.com/meower-media-co">GitHub</a> | <a class="nav-links" href="https://wiki.meower.org">Wiki</a> | <a class="nav-links" href="https://forums.meower.org">Forums</a>
+  </section>
+</body>
+
 </html>
