New section and adding goshdarn semi-colons

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
   <section>
     <a class="nav-links" href="https://app.meower.org">Launch</a> | <a class="nav-links" href="https://svelte.meower.org">Svelte Client</a> | <a class="nav-links" href="https://github.com/meower-media-co">GitHub</a> | <a class="nav-links" href="https://wiki.meower.org">Wiki</a> | <a class="nav-links" href="https://forums.meower.org">Forums</a>
   </section>
+  <br>
+  <section>
+    <h1 class="title">Welcome!</h1>
+  </section>
 </body>
 
 </html>
