--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Meower | Homepage</title>
   <link rel="shortcut icon" href="assets/meowermpfp.png" type="image/x-icon">
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.counter.dev/script.js" data-id="a61ddb19-fb6d-4c8d-b264-639be8f36807" data-utcoffset="8"></script>
 </head>
 <style>
   section {
@@ -22,10 +23,10 @@
       align-self: center;
       align-content: center; }
 </style>
-<body style="background-image: url('/assets/meowtain-blur.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center;">
+<body style="background-image: url('/assets/meowtain-blur.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
   <br>
   <section>
-    <a href="https://meower.org"><img src="/assets/logo.png"></a>
+    <a href="https://meower.org"><img style='height: 50%; width: 50%; object-fit: contain' src="/assets/logo.png"></a>
   </section>
   <br>
   <section>
@@ -34,6 +35,33 @@
   <br>
   <section>
     <h1 class="title">Welcome!</h1>
+    <p class="body">Meower is a free, open-source, and nonprofit social media platform. Meower is also a (currently WIP) alternative to Twitter, Discord, and Reddit, completely free of advertising, tracking, data collection, and more. </p>
+  </section>
+  <br>
+  <section>
+    <h1 class="title">A friendly place to be</h1>
+    <p class="body">Designed to be friendly for all ages, Meower has moderators and friends all-around. We're committed to keeping Meower a safe place to be.</p>
+  </section>
+  <br>
+  <section>
+    <h1 class="title">An original</h1>
+    <p class="body">Meower started life as a Scratch 3.0-based social media platform. We have a long history, too! Check out our <a class="white" href="https://wiki.meower.org"><u>wiki</u></a> for more info!</p>
+  </section>
+  <br>
+  <section>
+    <h1 class="title">Freedom to the masses</h1>
+    <p class="body">Everyone is welcome to use Meower. We don't have censorship, political agendas, and we don't care about money. Meower is just a place to hang out, nothing more, nothing less.</p>
+  </section>
+  <br>
+  <section>
+    <h1 class="title">Fully FOSS</h1>
+    <p class="body">Anyone is welcome to contribute to Meower on <a class="white" href="https://github.com/meower-media-co"><u>GitHub</u></a>. If you know Python, Scratch, HTML5, JavaScript, Node, Vue, Etc. You're welcome to join the party!</p>
+  </section>
+  <br>
+  <section>
+    <p class="body">©2020-2022 Meower Media Co.</p>
+    <p class="body">Meower Media Co. is not a legal entity, nor do we have professional lawyers.</p>
+    <p class="body">We get some basic analytics from this site via <a class="white" href="https://counter.dev"><u>Counter</u></a>. You can view Counter's privacy policy <a class="white" href="https://counter.dev/pages/privacy.html"><u>here</u></a>.</p>
   </section>
 </body>
 
