--- a/legal.html
+++ b/legal.html
@@ -26,7 +26,7 @@
 <body style="background-image: url('/assets/meowtain-blur.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
   <br>
   <section>
-    <a href="https://meower.org"><img style='height: 50%; width: 50%; object-fit: contain' src="/assets/logo.png"></a>
+    <a href="/"><img style='height: 50%; width: 50%; object-fit: contain' src="/assets/logo.png"></a>
   </section>
   <br>
   <section>
