Slightly smaller text needs to die

--- a/legal.html
+++ b/legal.html
@@ -111,7 +111,7 @@
     <!-- What does this mean? <p><b>We are not evil, and shall not become evil.</b> !-->
     <br><p class="body"><i>We promise to uphold your rights to privacy and the aforementioned</i></p>
     <br>
-    <p><b>Meower won't become closed-source.</b>
+    <p class="body"><b>Meower won't become closed-source.</b>
     <br><i>It will remain FOSS (Free and Open-Source) for the betterment of ourselves and our posterity.</i></p>
     <br>
     <p class="body"><b>We are required to:</b>
