--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Meower | Homepage</title>
-  <link rel="shortcut icon" href="assets/meowermpfp.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/77336943.png" type="image/x-icon">
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.counter.dev/script.js" data-id="a61ddb19-fb6d-4c8d-b264-639be8f36807" data-utcoffset="8"></script>
 </head>
