--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Meower | 404 Page not found</title>
-  <link rel="shortcut icon" href="assets/meowermpfp.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/77336943.png" type="image/x-icon">
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.counter.dev/script.js" data-id="a61ddb19-fb6d-4c8d-b264-639be8f36807" data-utcoffset="8"></script>
 </head>
@@ -26,7 +26,7 @@
 <body style="background-image: url('/assets/meowtain-blur.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
   <br>
   <section>
-    <a href="/"><img style='height: 50%; width: 50%; object-fit: contain' src="/assets/77336943.png"></a>
+    <a href="/"><img style='height: 50%; width: 50%; object-fit: contain' src="/assets/meowerlogo-white.svg"></a>
   </section>
   <br>
   <section>
