I believe the public analytics page should be there

--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
   <section>
     <p class="body">©2020-2022 Meower Media Co.</p>
     <p class="body">Meower Media Co. is not a legal entity, nor do we have professional lawyers.</p>
-    <p class="body">We get some basic analytics from this site via <a class="white" href="https://counter.dev"><u>Counter</u></a>. You can view Counter's privacy policy <a class="white" href="https://counter.dev/pages/privacy.html"><u>here</u></a>.</p>
+    <p class="body">We get some basic analytics from this site via <a class="white" href="https://counter.dev/dashboard.html?user=Josh%20%40%20Meower&token=gPbZ9_bqdVI%3D"><u>Counter</u></a>. You can view Counter's privacy policy <a class="white" href="https://counter.dev/pages/privacy.html"><u>here</u></a>.</p>
   </section>
 </body>
 
