--- a/customid.html
+++ b/customid.html
@@ -7,6 +7,7 @@
         <title>Meower Classic Page | Custom ID</title>
         <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
         <link href="style.css" rel="stylesheet" type="text/css" />
+        <script src="https://cdn.counter.dev/script.js" data-id="a61ddb19-fb6d-4c8d-b264-639be8f36807" data-utcoffset="8"></script>
     </head>
     <body>
         <script>
