--- a/legal.html
+++ b/legal.html
@@ -45,7 +45,10 @@
   <br>
   <section>
     <h1 class="title">License</h1>
-    <p class="body">The Meower Source Code is licensed under our own custom license: The MEOW license!<br>The MEOW license permits anyone and everyone to contribute to the source code very elegantly. It also protects the source code from patents, and also allows anyone to make their own version of the source for public or private use! Learn more about the MEOW license <a class="white" href="https://github.com/meower-media-co/Meower-Vanilla/blob/main/LICENSE"><u>here</u></a>.</p>
+    <p class="body">The Meower Source Code is licensed under the MIT license<br>Copyright 2020-2022 Meower Media<br>
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:<br><br
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.<br><br>
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
   </section>
   <br>
   <section>
