Revert "Update index.html"
This reverts commit b51939323572a56696597a94bec4b78263667739.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <body style="background-image: url('/assets/meowtain-blur.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
   <br>
   <section>
-<a href="/"><img style="margin: 20px; height: 50%; width: 50%; object-fit: contain" src="/assets/meowerlogo-white.svg">
-<h1 class="title">The friendlier social media.</h1></a>
-</section>
+    <a href="/"><img style='height: 50%; width: 50%; object-fit: contain' src="/assets/meowerlogo-white.svg"></a>
+  </section>
+  <br>
   <section>
     <a class="nav-links" href="https://app.meower.org">Launch</a> | <a class="nav-links" href="https://svelte.meower.org">Svelte Client</a> | <a class="nav-links" href="https://github.com/meower-media-co">GitHub</a> | <a class="nav-links" href="https://wiki.meower.org">Wiki</a> | <a class="nav-links" href="https://forums.meower.org">Forums</a> | <a class="nav-links" href="/legal.html">Legal</a>
   </section>
