--- a/customid.html
+++ b/customid.html
@@ -1,13 +1,11 @@
-<!--Don't update this page until it meets new design standards!-->
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Meower Classic Page | Custom ID</title>
+        <title>meower | Custom ID</title>
         <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
         <link href="style.css" rel="stylesheet" type="text/css" />
-        <script src="https://cdn.counter.dev/script.js" data-id="a61ddb19-fb6d-4c8d-b264-639be8f36807" data-utcoffset="8"></script>
     </head>
     <body>
         <script>
@@ -159,7 +157,6 @@
         <div class="content" id="loginForm">
             <h2 style="color:#ff5600;">Beta 6 Custom ID</h2>
             <div class="meower-info">In Beta 6 every account will have a unique ID associated with them, making it easy to implement things such as being able to change your username without having to create a new account.<br>Current users of Meower are able to request a custom ID that will be associated with their account. Please login below to be able to choose a custom ID for your account.</div>
-            <div class="meower-info" style="color:#ff0000">Note, you are currently visiting a Classic Page. Classic pages do not use the latest design standards, and won't be updated until they do.</div>
             <br>
             <form action="#">
                 <div class="meower-info" id="loginErrorText" style="display: none; color: #ff0000;"></div>
