--- a/discord.html
+++ b/discord.html
@@ -1,13 +1,11 @@
-<!--Don't update this page until it meets new design standards!-->
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Meower Classic Page | Discord</title>
+        <title>meower | Discord</title>
         <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
         <link href="style.css" rel="stylesheet" type="text/css" />
-        <script src="https://cdn.counter.dev/script.js" data-id="a61ddb19-fb6d-4c8d-b264-639be8f36807" data-utcoffset="8"></script>
     </head>
     <body>
         <script>
@@ -113,7 +111,6 @@
         <div class="content" id="loginForm">
             <h2 style="color:#ff5600;">Link Meower account to your Discord account</h2>
             <div class="meower-info">To link your Meower account to your Discord account, just login below!<br>If you don't have a Meower account click <a href="https://app.meower.org" target="_blank">here</a> to open Meower and create one!</div>
-            <div class="meower-info" style="color:#ff0000">Note, you are currently visiting a Classic Page. Classic pages do not use the latest design standards, and won't be updated until they do.</div>
             <br><br>
             <form action="#">
                 <input type="text" id="username" placeholder="Username" /><br><br>
