add legacy-style.css for pages using old design

--- a/customid.html
+++ b/customid.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <title>meower | Custom ID</title>
         <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="legacy-style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <script>
