MIT License fixed, added info about IPHub and CF

--- a/legal.html
+++ b/legal.html
@@ -46,17 +46,17 @@
     <h1 class="title">License</h1>
     <p class="body">MIT License<br>
 
-Copyright (c) 2022 Meower Media.<br>
+Copyright (c) 2022 Meower Media.<br><br><br>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:<br>
+furnished to do so, subject to the following conditions:<br><br>
 
 The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.<br>
+copies or substantial portions of the Software.<br><br>
 
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
@@ -96,9 +96,12 @@ SOFTWARE.</p>
     <h1 class="title">Privacy Policy</h1>
       <p class="body"><b>We don't collect any personally identifying information.</b>
       <br>a. This includes real names, dates of birth, gender info, geographic data, etc.
-      <br>b. Your IP address will be collected when signing up to ensure security, and will only be used for moderation purposes.
+      <br>b. Your IP address will be collected and shared with IPHub when signing up to ensure security, and will only be used for moderation purposes. IPHub's privacy policy can be found <a href="https://iphub.info/legal/privacy">here.</a>
       <br>
-      <br><i>*Please note that if you put in your real name, we are not legally responsible for anything that happens in or out of Meower.</i></p>
+        All of Meower's traffic is passed through Cloudflare for security. Cloudflare's privacy policy is available <a href="https://www.cloudflare.com/privacypolicy/">here.</a>
+      <br>
+      <br>  
+      <i>*Please note that if you put in your real name, we are not legally responsible for anything that happens in or out of Meower.</i></p>
       <br>
       <p class="body"><b>We only store information needed to make our service work.</b>
       <br>This STRICTLY includes, and IS LIMITED TO:
