--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Meower | Homepage</title>
-  <link rel="shortcut icon" href="/assets/77336943.png" type="image/x-icon">
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="https://cdn.meower.org/asset-cdn/website/77336943.png" type="image/x-icon">
+  <link href="https://cdn.meower.org/asset-cdn/website/style.css" rel="stylesheet" type="text/css" />
 </head>
 <style>
   section {
@@ -22,10 +22,10 @@
       align-self: center;
       align-content: center; }
 </style>
-<body style="background-image: url('/assets/meowtain-blur.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
+<body style="background-image: url('https://cdn.meower.org/asset-cdn/website/meowtain-blur.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
   <br>
   <section>
-    <a href="/"><img style='height: 50%; width: 50%; object-fit: contain' src="/assets/meowerlogo-white.svg"></a>
+    <a href="/"><img style='height: 50%; width: 50%; object-fit: contain' src="https://cdn.meower.org/asset-cdn/website/meowerlogo-white.svg"></a>
   </section>
   <br>
   <section>
