--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
 </style>
 <body style="background-image: url('/assets/meowtain-blur.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
   <br>
-  <section>
+  
+  </section>
+  <br>
     <a href="/"><img style='height: 50%; width: 50%; object-fit: contain' src="/assets/meowerlogo-white.svg"></a>
   </section>
   <br>
   <section>
-    <a class="nav-links" href="https://app.meower.org">Launch</a> | <a class="nav-links" href="https://svelte.meower.org">Svelte Client</a> | <a class="nav-links" href="https://github.com/meower-media-co">GitHub</a> | <a class="nav-links" href="https://wiki.meower.org">Wiki</a> | <a class="nav-links" href="https://forums.meower.org">Forums</a> | <a class="nav-links" href="/legal.html">Legal</a>
+    <a class="nav-links" href="https://app.meower.org">Launch</a> | <a class="nav-links" href="https://svelte.meower.org">Svelte Client</a> | <a class="nav-links" href="https://github.com/meower-media-co">GitHub</a> | <a class="nav-links" href="https://wiki.meower.org">Wiki</a> | <a class="nav-links" href="https://http.meower.org"> http </a> | <a class="nav-links" href="https://forums.meower.org">Forums</a> | <a class="nav-links" href="/legal.html">Legal</a>
   </section>
   <br>
   <section>
