Replace 77336943.png with favicon.png

--- a/customid.html
+++ b/customid.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>meower | Custom ID</title>
-        <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
         <link href="legacy-style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
