changes some coding languages in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <br>
   <section>
     <h1 class="title">Fully FOSS</h1>
-    <p class="body">Anyone is welcome to contribute to Meower on <a class="white" href="https://github.com/meower-media-co"><u>GitHub</u></a>. If you know Python, Scratch, HTML5, JavaScript, Node, Vue, Etc. You're welcome to join the party!</p>
+    <p class="body">Anyone is welcome to contribute to Meower on <a class="white" href="https://github.com/meower-media-co"><u>GitHub</u></a>. If you know Python, Scratch, HTML5, JavaScript, CSS, Svelte, Etc. You're welcome to join the party!</p>
   </section>
   <br>
   <section>
