Updating the filler text (#55)
* Update index.html

* Update index.html

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
   </section>
   <br>
   <section>
-    <a class="nav-links" href="https://app.meower.org">Launch</a> | <a class="nav-links" href="https://svelte.meower.org">Svelte Client</a> | <a class="nav-links" href="https://github.com/meower-media-co">GitHub</a> | <a class="nav-links" href="https://wiki.meower.org">Wiki</a> | <a class="nav-links" href="https://forums.meower.org">Forums</a> | <a class="nav-links" href="/legal.html">Legal</a>
+    <a class="nav-links" href="https://svelte.meower.org">Launch</a> | <a class="nav-links" href="https://app.meower.org">Scratch Client</a> | <a class="nav-links" href="https://github.com/meower-media-co">GitHub</a> | <a class="nav-links" href="https://wiki.meower.org">Wiki</a> | <a class="nav-links" href="https://forums.meower.org">Forums</a> | <a class="nav-links" href="/legal.html">Legal</a>
   </section>
   <br>
   <section>
     <h1 class="title">Welcome!</h1>
-    <p class="body">Meower is a free, open-source, and nonprofit social media platform. Meower is also a (currently WIP) alternative to Twitter, Discord, and Reddit, completely free of advertising, tracking, data collection, and more. </p>
+    <p class="body">Meower is a free, open-source, and nonprofit social media platform free of tracking, ads, and data collection. </p>
   </section>
   <br>
   <section>
     <h1 class="title">A friendly place to be</h1>
-    <p class="body">Designed to be friendly for all ages, Meower has moderators and friends all-around. We're committed to keeping Meower a safe place to be.</p>
+    <p class="body">Meower is designed to be friendly for all ages. We're committed to keeping Meower a safe place to be.</p>
   </section>
   <br>
   <section>
@@ -48,13 +48,8 @@
   </section>
   <br>
   <section>
-    <h1 class="title">Freedom to the masses</h1>
-    <p class="body">Everyone is welcome to use Meower. We don't have censorship, political agendas, and we don't care about money. Meower is just a place to hang out, nothing more, nothing less.</p>
-  </section>
-  <br>
-  <section>
     <h1 class="title">Fully FOSS</h1>
-    <p class="body">Anyone is welcome to contribute to Meower on <a class="white" href="https://github.com/meower-media-co"><u>GitHub</u></a>. If you know Python, Scratch, HTML5, JavaScript, Node, Vue, Etc. You're welcome to join the party!</p>
+    <p class="body">Anyone is welcome to contribute, fork or view Meower on our <a class="white" href="https://github.com/meower-media-co"><u>GitHub</u></a>!</p>
   </section>
   <br>
   <section>
