attempt to fix /discord

--- a/discord.html
+++ b/discord.html
@@ -112,10 +112,10 @@
             <h2 style="color:#ff5600;">Link Meower account to your Discord account</h2>
             <div class="meower-info">To link your Meower account to your Discord account, just login below!<br>If you don't have a Meower account click <a href="https://app.meower.org" target="_blank">here</a> to open Meower and create one!</div>
             <br><br>
-            <form action="#">
+            <form>
                 <input type="text" id="username" placeholder="Username" /><br><br>
                 <input type="password" id="password" placeholder="Password" /><br><br><br>
-                <button type="submit" id="submit" onclick="login();">Login and Link</button>
+                <button type="button" id="submit" onclick="login();">Login and Link</button>
             </form>
         </div>
         <div class="content" id="errorDialog" style="display: none;">
