--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <br>
   <section>
     <p class="body">©2020-2022 Meower Media Co.</p>
+    <p class="body">Website redesign by <a class="white" href="https://joshatticus.is-a.dev">JoshAtticus</a></p>
   </section>
 </body>
 
