--- a/legal.html
+++ b/legal.html
@@ -159,6 +159,7 @@ SOFTWARE.</p>
   <br>
   <section>
     <p class="body">©2020-2022 Meower Media Co.</p>
+    <p class="body">Website redesign by <a class="white" href="https://joshatticus.is-a.dev">JoshAtticus</a></p>
   </section>
 </body>
 </html>
