--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       align-self: center;
       align-content: center; }
 </style>
-<body style="background-image: url('https://cdn.meower.org/asset-cdn/website/meowtain-blur.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
+<body style="background-image: url('https://cdn.meower.org/asset-cdn/website/meowtain-blur.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
   <br>
   <section>
     <a href="/"><img style='height: 50%; width: 50%; object-fit: contain' src="https://cdn.meower.org/asset-cdn/website/meowerlogo-white.svg"></a>
