--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
   </section>
   <br>
   <section>
-    <p class="body"><b>The Meower server is currently being migrated, causing downtime. Please see the <a href="https://status.meower.org">status page</a> for updates.</b></p>
+    <p class="body"><b>The Meower server is currently being migrated, causing downtime. Please see the <a class="white "href="https://status.meower.org">status page</a> for updates.</b></p>
   </section>
   <br>
   <section>
