--- a/legal.html
+++ b/legal.html
@@ -158,7 +158,7 @@ SOFTWARE.</p>
   </section>
   <br>
   <section>
-    <p class="body">©2020-2023 Meower Media Co.</p>
+    <p class="body">©2020 - <script type="text/javascript">document.write( new Date().getFullYear() );</script> Meower Media Co.</p>
     <p class="body">Website redesign by <a class="white" href="https://joshatticus.is-a.dev">JoshAtticus</a></p>
   </section>
 </body>
