--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
       text-align: center;
       align-self: center;
       align-content: center; }
+
+   .warning {
+  background-color: rgba(255, 0, 0, 0.8);
+  align-items: center;
+  text-align: center;
+  border-radius: 20px;
+  display: table;
+  color: white;
+}
+
+.warning p {
+  padding: 12px;
+  margin-top: -10px;
+}
+
 </style>
 <body style="background-image: url('https://cdn.meower.org/asset-cdn/website/meowtain-blur.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
   <br>
@@ -52,6 +67,12 @@
     <p class="body">Anyone is welcome to contribute, fork or view Meower on our <a class="white" href="https://github.com/meower-media-co"><u>GitHub</u></a>!</p>
   </section>
   <br>
+   <div class="warning">
+   <h3>
+    WARNING
+   </h3>
+ <p> We do not condone school devices connecting to meower in anyway, shape, or form</p>
+ </div>
   <section>
     <p class="body">©2020 - <script type="text/javascript">document.write( new Date().getFullYear() );</script> Meower Media Co.</p>
     <p class="body">Website redesign by <a class="white" href="https://joshatticus.is-a.dev">JoshAtticus</a></p>
