--- a/misc/email/terminatechild.html
+++ b/misc/email/terminatechild.html
@@ -70,7 +70,7 @@
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
 	<h2>Your account has been terminated&nbsp;</h2>
     <p>Dear [user],<br><br>
-      The Meower moderator team has decided to permantly terminate your Meower account as they have found your account in violation of Meower's Terms of Service.<br>
+      The Meower moderator team has decided to permanently terminate your Meower account as they have found your account in violation of Meower's Terms of Service.<br>
       <br>
       Your account has been terminated for the following reason:<div class="message-container">
       [reason]&nbsp; &nbsp; &nbsp;&nbsp;</div><br>
