--- a/legal.html
+++ b/legal.html
@@ -88,7 +88,7 @@ SOFTWARE.</p>
       <br>1. Being kicked from Meower
       <br>2. Being indefinitely banned from Meower
       <br>3. Any devices connected to the offending IP address being banned from Meower
-      <br>4. Being banned from any affiliates or direct partners of Meower Media Co.</p>
+      <br>4. Being banned from any affiliates or direct partners of Meower Media.</p>
   </p>
   </section>
   <br>
@@ -158,7 +158,7 @@ SOFTWARE.</p>
   </section>
   <br>
   <section>
-    <p class="body">©2020 - <script type="text/javascript">document.write( new Date().getFullYear() );</script> Meower Media Co.</p>
+    <p class="body">©2020 - <script type="text/javascript">document.write( new Date().getFullYear() );</script> Meower Media.</p>
     <p class="body">Website redesign by <a class="white" href="https://joshatticus.is-a.dev">JoshAtticus</a></p>
   </section>
 </body>
