--- a/misc/email/IPban.html
+++ b/misc/email/IPban.html
@@ -78,8 +78,8 @@ Please note that attempts to circumvent this will result in more IP bans.&nbsp;&
 
 <br>
 
-- Meower Media Co.</p>
-    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media Co.<br>
+- Meower Media.</p>
+    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media.<br>
 <br>
 If you have questions about Meower or this email, feel free to contact us at <a href="mailto:support@meower.org">support@meower.org</a><br>
 <br>
