--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
   </section>
   <br>
   <section>
-    <p class="body">©2020 - <script type="text/javascript">document.write( new Date().getFullYear() );</script> Meower Media Co.</p>
+    <p class="body">©2020 - <script type="text/javascript">document.write( new Date().getFullYear() );</script> Meower Media.</p>
     <p class="body">Website redesign by <a class="white" href="https://joshatticus.is-a.dev">JoshAtticus</a></p>
   </section>
 </body>
