--- a/misc/email/accountdeletion.html
+++ b/misc/email/accountdeletion.html
@@ -77,8 +77,8 @@ If this was you, you can ignore this email.&nbsp; <br>
 Account Recovery: https://meower.org/...</em></span><br>
 <br>
 
-- Meower Media Co.</p>
-    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media Co.<br>
+- Meower Media.</p>
+    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media.<br>
 <br>
 If you have questions about Meower or this email, feel free to contact us at <a href="mailto:support@meower.org">support@meower.org</a><br>
 <br>
