--- a/misc/email/adultaccountlink.html
+++ b/misc/email/adultaccountlink.html
@@ -75,8 +75,8 @@
 Link Now: https://meower.org/...</em></span><br>
 <br>
 
-- Meower Media Co.</p>
-    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media Co.<br>
+- Meower Media.</p>
+    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media.<br>
 <br>
 If you have questions about Meower or this email, feel free to contact us at <a href="mailto:support@meower.org">support@meower.org</a><br>
 <br>
