--- a/misc/email/automatedresponse(support@meower.org).html
+++ b/misc/email/automatedresponse(support@meower.org).html
@@ -64,8 +64,8 @@
       <em>This is an automated message. If we don't send back in 2 weeks, please send another email.</em>&nbsp; &nbsp;&nbsp;<br>
 <br>
 
-- Meower Media Co.</p>
-    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media Co.<br>
+- Meower Media.</p>
+    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media.<br>
 <br>
 If you have questions about Meower or this email, feel free to contact us at <a href="mailto:support@meower.org">support@meower.org</a><br>
 <br>
