--- a/misc/email/recovery.html
+++ b/misc/email/recovery.html
@@ -86,8 +86,8 @@ If you believe this was in error, please file an appeal using the button below. 
 Appeal: https://meower.org/...<br></em></span><br>
 <br>
 
-- Meower Media Co.</p>
-    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media Co.<br>
+- Meower Media.</p>
+    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media.<br>
 <br>
 If you have questions about Meower or this email, feel free to contact us at <a href="mailto:support@meower.org">support@meower.org</a><br>
 <br>
