--- a/misc/email/terminatechild.html
+++ b/misc/email/terminatechild.html
@@ -89,10 +89,10 @@ If you believe this was in error, please ask your parent/guardian to file an app
 
 <br>
 
-- Meower Media Co.<br>
+- Meower Media.<br>
 <br>
 </p>
-    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media Co.<br>
+    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media.<br>
 <br>
 If you have questions about Meower or this email, feel free to contact us at <a href="mailto:support@meower.org">support@meower.org</a><br>
 <br>
