--- a/misc/email/terminateparent.html
+++ b/misc/email/terminateparent.html
@@ -95,9 +95,9 @@ If you believe this was in error, please file an appeal using the button below. 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
 Appeal: https://meower.org/...<br></em></span><br>
-- Meower Media Co.
+- Meower Media.
 </p>
-    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media Co.<br>
+    </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media.<br>
 <br>
 If you have questions about Meower or this email, feel free to contact us at <a href="mailto:support@meower.org">support@meower.org</a><br>
 <br>
