forgot about these two

--- a/legal.html
+++ b/legal.html
@@ -39,7 +39,7 @@
   <br>
   <section>
     <h1 class="title" style='color: red;'>Important Notice</h1>
-    <p class="body">Please note that this document isn't written by professional lawyers and may contain errors. Hereafter, “we”/“our”/“us” refers to Meower Media Co, and “you” refers to a user of Meower. We aren't lawyers and we don't have lawyers. Everything you see here is all-encompassing.</p>
+    <p class="body">Please note that this document isn't written by professional lawyers and may contain errors. Hereafter, “we”/“our”/“us” refers to Meower Media, and “you” refers to a user of Meower. We aren't lawyers and we don't have lawyers. Everything you see here is all-encompassing.</p>
   </section>
   <br>
   <section>
