Fix typo, change "accounts" to "account(s)"

--- a/misc/email/IPban.html
+++ b/misc/email/IPban.html
@@ -60,7 +60,7 @@
 	<h2>IP Ban Notice</h2>
     <p>Dear [user],<br> 
       <br>
-The Meower moderator team has decided to permantly terminate your IP Address as they have found the accounts under this IP in violation of Meower's Terms of Service. <br>
+The Meower moderator team has decided to permanently terminate your IP Address as they have found the account(s) under this IP in violation of Meower's Terms of Service. <br>
 <br>
 Your IP has been terminated for the following reason: <br>
 <br>
