--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Meower | 404 Page not found</title>
-  <link rel="shortcut icon" href="https://cdn.meower.org/asset-cdn/website/favicon.png" type="image/x-icon">
-  <link href="https://cdn.meower.org/asset-cdn/website/style.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon">
+  <link href="/style.css" rel="stylesheet" type="text/css" />
 </head>
 <style>
   section {
@@ -22,10 +22,10 @@
       align-self: center;
       align-content: center; }
 </style>
-<body style="background-image: url('https://cdn.meower.org/asset-cdn/website/meowtain-blur.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
+<body style="background-image: url('/assets/meowtain-blur.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; text-align: center; align-content: center; background-attachment: fixed;">
   <br>
   <section>
-    <a href="/"><img style='height: 50%; width: 50%; object-fit: contain' src="https://cdn.meower.org/asset-cdn/website/meowerlogo-white.svg"></a>
+    <a href="/"><img style='height: 50%; width: 50%; object-fit: contain' src="/assets/meowerlogo-white.svg"></a>
   </section>
   <br>
   <section>
@@ -36,7 +36,7 @@
     <h1 class="title">404 Page not found</h1>
     <p class="body">Whoops! Looks like you followed a link that leads to a non-existent page... or you were just looking for cat pics.</p>
     <br>
-    <img style='height: 50%; width: 50%; object-fit: contain' src="https://cdn.meower.org/asset-cdn/website/cat_disks.JPG"/>
+    <img style='height: 50%; width: 50%; object-fit: contain' src="/assets/cat_disks.jpg"/>
     <br>
     <a class="white" style='font-size: x-large;' href="/"><u>Go home</u></a>
   </section>
