--- a/legal.html
+++ b/legal.html
@@ -46,7 +46,7 @@
     <h1 class="title">License</h1>
     <p class="body">MIT License<br>
 
-Copyright (c) 2023 Meower Media.<br><br><br>
+Copyright (c) <script type="text/javascript">document.write( new Date().getFullYear() );</script> Meower Media.<br><br><br>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
