--- a/aboutus.html
+++ b/aboutus.html
@@ -64,7 +64,7 @@
     <div class="team-member">
       <img src="assets/cst.png" alt="CST's profile picture">
       <h3>CST1229</h3>
-      <p>"I originally created the <a href="app.meower.org">app.meower.org</a> client. uh"</p>
+      <p>"I originally created the <a href="https://app.meower.org">app.meower.org</a> client. uh"</p>
     </div>
 
     <div class="team-member">
