--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="assets/meowy.jpg" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="shortcut icon" href="icons/meowyicon.svg" type="image/x-icon">
   <title>Meower | About Us</title>
 </head>
 
@@ -16,17 +15,17 @@
   </header>
 
   <nav class="sticky">
-    <a href="index.html"><i class="fas fa-home icon"></i>Home</a>
-    <a href="https://app.meower.org"><i class="fas fa-rocket icon"></i>Launch</a>
-    <a href="aboutus.html"><i class="fas fa-info-circle icon"></i>About Us</a>
+    <a href="index.html"><img src="icons/home.svg">Home</a>
+    <a href="https://app.meower.org"><img src="icons/rocket.svg">Launch</a>
+    <a href="about.html"><img src="icons/help-circle.svg">About Us</a>
 
     <div class="dropdown">
-      <button class="dropbtn"><i class="fas fa-ellipsis-h icon"></i>More</button>
+      <button class="dropbtn"><img src="icons/more-horizontal.svg">More</button>
       <div class="dropdown-content">
-        <a href="https://forums.meower.org/"><i class="fas fa-comments icon"></i>Forums</a>
-        <a href="https://wiki.meower.org/wiki/Home"><i class="fas fa-book icon"></i>Wiki</a>
-        <a href="https://github.com/meower-media-co"><i class="fab fa-github icon"></i>GitHub</a>
-        <a href="legal.html"><i class="fas fa-gavel icon"></i>Legal</a>
+        <a href="https://forums.meower.org/"><img src="icons/users-2.svg">Forums</a>
+        <a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
+        <a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
+        <a href="legal.html"><img src="icons/scale.svg">Legal</a>
       </div>
     </div>
   </nav>
@@ -35,7 +34,7 @@
 
     <h1>About Us</h1>
     <div class="team-member">
-      <img src="assets/meowy.jpg" alt="meowy">
+      <img src="icons/meowyicon.svg" alt="meowy">
       <h3>Meowy</h3>
       <p>Our Official Mascot! You never know where you will find them, so keep a look out.</p>
     </div>
@@ -64,13 +63,13 @@
     <div class="team-member">
       <img src="assets/cst.png" alt="CST's profile picture">
       <h3>CST1229</h3>
-      <p>"I originally created the <a href="https://app.meower.org">app.meower.org</a> client. uh"</p>
+      <p>"I originally created the <a href="app.meower.org">app.meower.org</a> client. uh"</p>
     </div>
 
     <div class="team-member">
       <img src="assets/zed.png" alt="zedthehedgehog">
       <h3>zedthehedgehog</h3>
-      <p>Designing as Meower since 2020!</p>
+      <p>Designing at Meower since 2020!</p>
     </div>
 
     <div class="team-member">
@@ -82,7 +81,7 @@
     <div class="team-member">
       <img src="assets/voxalice.png" alt="voxalice">
       <h3>Voxalice</h3>
-      <p>Musician for Meower since 2020(!)</p>
+      <p>Musician for Meower since 2020!</p>
     </div>
 
     <!-- Add more team members here -->
